<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_workout_plan"
            android:icon="@drawable/baseline_fitness_center_24"
            android:title="@string/workout_plan" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/baseline_show_chart_24"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_applications_24"
            android:title="@string/settings" />
    </group>

</menu>
