<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_icon" />

    <Button
        android:id="@+id/create_workout_plan_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/create_workout_plan"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text" />

    <Button
        android:id="@+id/view_workout_plan_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/view_workout_plan"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/statistics_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_workout_plan_button" />

    <Button
        android:id="@+id/statistics_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/statistics"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/calendar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_workout_plan_button" />

    <Button
        android:id="@+id/calendar_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_background"
        android:text="@string/calendar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
