<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DifficultyLevelActivity"
    tools:showIn="@layout/activity_difficulty_level">

    <Button
        android:id="@+id/beginner_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/beginner"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/intermediate_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/intermediate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginner_button" />

    <Button
        android:id="@+id/pro_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_portrait"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_portrait"
        android:background="@drawable/button_background"
        android:text="@string/pro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intermediate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
